fix button badges & higher contrast

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -87,7 +87,7 @@
     padding: 0.3rem 0.4rem 0.3rem 0.4rem;
     display: flex;
     font-size: 1.2rem;
-    max-height: 1.4rem;
+    max-height: 1.9rem;
     transition-duration: 500ms;
     box-shadow: -1.5px 1.5px rgb(209, 56, 83),
         -3px 3px rgb(209, 90, 151),
